# expert-mind-skill

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SPEC.md  calibration_seed.md  pyproject.toml  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: tests.yml
cold-start/: registry.yaml
commands/: add-persona.md  init.md  run.md  status.md
deploy/: github-actions.yml.template
hooks/: hooks.json
output/: EVALUATION_REPORT.md
scripts/: distill.py  import_manual.py  judge.py  orchestrator.py  persona_loader.py  pull_bluesky.py  pull_email.py  pull_mastodon.py  pull_notion_snipd.py  pull_readwise.py  pull_rss.py  pull_telegram.py  pull_webfeed.py  pull_youtube.py  retry_errors.py  scrape_linkedin.py  scrape_x.py  scrape_x_official.py  wizard_state.py
skills/andrew-chen/: SKILL.md
skills/anish-acharya/: SKILL.md
skills/chris-harvey/: SKILL.md
skills/dangjr/: SKILL.md
skills/dawidprokopowicz/: SKILL.md
skills/elena-verna/: SKILL.md
skills/eric-seufert/: SKILL.md
skills/fazlurshah/: SKILL.md
skills/jacob-rushfinn/: SKILL.md
skills/janvoss93/: SKILL.md
skills/jason-lemkin/: SKILL.md
skills/marcusburke/: SKILL.md
skills/matej-lancaric/: SKILL.md
skills/mikolajbarczentewicz/: SKILL.md
skills/paul-levchuk/: SKILL.md
skills/prestonr/: SKILL.md
skills/rory-odriscoll/: SKILL.md
skills/sylvaingauchet/: SKILL.md
skills/toddgardner1/: SKILL.md
skills/tomasz-tunguz/: SKILL.md
skills/vkalmykov/: SKILL.md
tests/: test_smoke.py
